--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^5.0.0",
     "json-server": "^1.0.0-alpha.23",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "browserslist": [
     "last 1 version",
