--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.29.3",
+    "core-js": "^3.36.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
@@ -27,6 +32,7 @@
   ],
   "description": "",
   "dependencies": {
+    "es6-promise-polyfill": "^1.2.0",
     "htmlmin": "^0.0.7"
   }
 }
